[package]
name = "codex-export"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-core = { path = "../codex-core" }
codex-index = { path = "../codex-index" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.5"

[dev-dependencies]
tempfile = "3.8"
