[package]
name = "codex-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-core = { path = "../codex-core" }

tokio = { version = "1.35", features = ["fs", "io-util"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
pulldown-cmark = "0.9"
html2text = "0.6"
encoding_rs = "0.8"
chardetng = "0.1"
uuid = { version = "1.6", features = ["v4"] }

# Optional: OCR and image processing
image = { version = "0.24", features = ["png", "jpeg", "webp"], optional = true }
tesseract = { version = "0.15", optional = true }

[features]
default = ["text"]
text = []
images = ["image", "tesseract"]
full = ["text", "images"]
