[package]
name = "wm-evolution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WhiteMagic evolution acceleration — info_theory, thermodynamic, HRR composition"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.2"
num-complex = "0.4"
