[package]
name = "wm-neuro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WhiteMagic neuro-cognitive hot-path modules (thalamic gating, predictive coding, momentum)"

[lib]
name = "wm_neuro"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = ["pyo3"]
python = ["pyo3"]
